add user Access control to match result page

--- a/app/views/potential_matches/_child_summary_row.html.erb
+++ b/app/views/potential_matches/_child_summary_row.html.erb
@@ -14,6 +14,7 @@
       <td><%= detail["relation_name"] %></td>
       <td><%= detail["inquiry_date"] %></td>
       <td><%= detail["subform_tracing_request_name"] %></td>
+      <td><%= detail["owned_by"] %></td>
       <td><%= detail["average_rating"].round(5) %></td>
     </tr>
 <% end %>
