--- a/app/views/form_section/_field_display_document.html.erb
+++ b/app/views/form_section/_field_display_document.html.erb
@@ -1,6 +1,6 @@
-<% if formObject["other_documents"].present? %>
+<% if formObject["documents"].present? %>
   <div class="uploaded-documents">
-    <% formObject["other_documents"].each do |document| %>
+    <% formObject["documents"].each do |document| %>
       <div class="row">
         <div class="medium-4 columns">
           <label class="key document">Other Document</label>
