--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -1,6 +1,8 @@
 <%
   #TODO: Add loading different types of documents (BIA, BID, Other)
-  documents = formObject["documents"] || []
+  upload_document = field.name
+
+  documents = formObject[form_id] || []
   documents = documents.select { |document| document["file_name"].present? && document["attachment_key"].present? }
   record_class_name = formObject.class.name.underscore.downcase
 %>
@@ -46,21 +48,21 @@
       <div class="row">
         <div class="medium-4 columns">
           <span class="tool-tip-label">
-            <%= label_tag "#{formObject.class.name.underscore.downcase}[upload_document][0][document]", I18n.t("fields.file_upload_box.add_document_label"), :class=>'key inline' %>
+            <%= label_tag "#{formObject.class.name.underscore.downcase}[#{upload_document}][0][document]", I18n.t("fields.file_upload_box.add_document_label"), :class=>'key inline' %>
           </span>
         </div>
         <div class="medium-8 columns file_upload">
-          <%= render "form_section/file_input", name: "#{formObject.class.name.underscore.downcase}[upload_document][0][document]", id: "#{formObject.class.name.underscore.downcase}_upload_document_0_document", help_text: document_upload_box.help_text || ""%>
+          <%= render "form_section/file_input", name: "#{formObject.class.name.underscore.downcase}[#{upload_document}][0][document]", id: "#{formObject.class.name.underscore.downcase}_#{upload_document}_0_document", help_text: document_upload_box.help_text || ""%>
         </div>
       </div>
       <div class="row">
         <div class="medium-4 columns">
           <span class="tool-tip-label">
-            <%= label_tag "#{formObject.class.name.underscore.downcase}[upload_document][0][document_description]", I18n.t("fields.file_upload_box.document_description"), :class=>'key inline' %>
+            <%= label_tag "#{formObject.class.name.underscore.downcase}[#{upload_document}][0][document_description]", I18n.t("fields.file_upload_box.document_description"), :class=>'key inline' %>
           </span>
         </div>
         <div class="medium-8 columns">
-          <%= text_field_tag "#{formObject.class.name.underscore.downcase}[upload_document][0][document_description]", "", :id => "#{formObject.class.name.underscore.downcase}_upload_document_0_document_description" %>
+          <%= text_field_tag "#{formObject.class.name.underscore.downcase}[#{upload_document}][0][document_description]", "", :id => "#{formObject.class.name.underscore.downcase}_#{upload_document}_0_document_description" %>
         </div>
       </div>
     </div>
