--- a/app/views/form_section/_show_form_section.html.erb
+++ b/app/views/form_section/_show_form_section.html.erb
@@ -9,7 +9,7 @@
       <% end %>
 
       <% (section.fields.select{|field| field.showable?}).each do |field| %>
-        <%= render :partial => field_template_path(field, true),  :locals=>{:field => field, :formObject=>formObject, :form_group_name => form_group_name, :display_audio_delete_checkbox => false} %>
+        <%= render :partial => field_template_path(field, true), :locals=>{:field => field, :formObject => formObject, :form_group_name => form_group_name, :form_id => section.unique_id, :display_audio_delete_checkbox => false} %>
       <% end %>
     </fieldset>
   <% end %>
