--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -35,6 +35,9 @@
           <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: true  %>
           <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: false  %>
         <% end %>
+        <% if can?(:request_approval, controller.model_class) %>
+          <%= render partial: 'approvals/button', locals: {model: Child, instance: @child} %>
+        <% end %>
         <% if can?(:approve_case_plan, controller.model_class) %>
           <%= render 'record_shared/approve_case_plan_button', instance: @child %>
         <% end %>
