Little fixes plus fixed rspec tests

--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -1,5 +1,6 @@
 <%
-  #TODO: Add loading different types of documents (BIA, BID, Other)
+  # By having certain things derived from field name and form name
+  # it'll be much easier now to load different types of document forms (BIA, BID, Other)
   upload_document = field.name
   update_document = upload_document.sub 'upload', 'update'
 
