--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -16,6 +16,14 @@
 <% if documents.present? && !formObject.new_record?%>
   <% documents.each do |document| %>
     <div class="row update_document">
+      <% attachment_key = document["attachment_key"] %>
+      <% document_description = document["document_description"] || "" %>
+      <% date = document["document_date"] || "" %>
+      <% comments = document["comments"] || "" %>
+      <% name = "#{record_class_name}[#{update_document}][#{attachment_key}]" %>
+      <% description_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_document_description"%>
+      <% date_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_date"%>
+      <% comments_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_comments"%>
       <div class="medium-4 columns">
         <span class="tool-tip-label">
           <%= label_tag I18n.t(document_upload_box.name, :default => document_upload_box.display_name) %>
@@ -27,14 +35,22 @@
         </div>
       </div>
       <div class="medium-4 columns">
-        <label class="key">Document Description</label>
+        <label class="key">Document Name</label>
       </div>
       <div class="medium-8 columns">
-        <% attachment_key = document["attachment_key"] %>
-        <% document_description = document["document_description"] || "" %>
-        <% name = "#{record_class_name}[#{update_document}][#{attachment_key}]" %>
-        <% description_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_document_description"%>
         <%= text_field_tag "#{name}[document_description]", document_description, :id => description_field_id %>
+      </div>
+      <div class="medium-4 columns">
+        <label class="key">Document Date</label>
+      </div>
+      <div class="medium-8 columns">
+        <%= text_field_tag "#{name}[date]", date, :id => date_field_id, :class => 'form_date_field' %>
+      </div>
+      <div class="medium-4 columns">
+        <label class="key">Comments</label>
+      </div>
+      <div class="medium-8 columns">
+        <%= text_area_tag "#{name}[comments]", comments, :id => comments_field_id %>
         <div>
           <% checkbox_id = "#{record_class_name}_#{update_document}_#{attachment_key}_delete_document" %>
           <%= check_box_tag("#{name}[delete_document]", true, false, :id => checkbox_id) %>
