--- a/app/views/form_section/_add_field.html.erb
+++ b/app/views/form_section/_add_field.html.erb
@@ -8,49 +8,41 @@
         <div class="space"></div>
         <%= render :partial => 'form_section/fields', :locals => {:fld => fld, :fields => fields, :given_locale => I18n.default_locale, :lookup_options => @lookup_options, :is_field_edit => true, :is_translation => false} %>
       </div>
-      <p class="chkbox_web_visible">
       <div class="row">
-        <div class="medium-3 columns">
+        <div class="medium-4 columns">
           <%= fld.label :visible, t("visible_for_web"), :class => 'key inline' %>
         </div>
-        <div class="medium-9 columns">
-          <%= fld.check_box :visible?, {}, "true", "false" %>
+        <div class="medium-8 columns">
+          <%= fld.check_box :visible?, {:class => 'visible'}, "true", "false" %>
           <%= fld.hidden_field :type, :class => "field_type" %>
         </div>
       </div>
-      </p>
       <% if ['primeromodule-cp'].include? @module_id %>
-          <p class="chkbox_mobile_visible">
-          <div class="row">
-            <div class="medium-3 columns">
+          <div class="row mobile_visible">
+            <div class="medium-4 columns">
               <%= fld.label :mobile_visible, t("visible_for_mobile"), :class => 'key inline' %>
             </div>
-            <div class="medium-9 columns">
-              <%= fld.check_box :mobile_visible?, {}, "true", "false" %>
+            <div class="medium-8 columns">
+              <%= fld.check_box :mobile_visible?, {:class => 'visible_on_mobile'}, "true", "false" %>
               <%= fld.hidden_field :type, :class => "field_type" %>
             </div>
           </div>
-          </p>
-          <p class="chkbox_hide_on_view_page">
           <div class="row">
-            <div class="medium-3 columns">
+            <div class="medium-4 columns">
               <%= fld.label :hide_on_view_page, t("hide_on_view_page"), :class => 'key inline' %>
             </div>
-            <div class="medium-9 columns">
+            <div class="medium-8 columns">
               <%= fld.check_box :hide_on_view_page?, {}, "true", "false" %>
             </div>
           </div>
-          </p>
-          <p class="chkbox_show_on_minify_form">
-          <div class="row">
-            <div class="medium-3 columns">
-              <%= fld.label :show_on_minify_form, t("show_on_minify_form"), :class => 'key inline' %>
+          <div class="row short_form">
+            <div class="medium-4 columns">
+              <%= fld.label :show_on_short_form, t("show_on_short_form"), :class => 'key inline' %>
             </div>
-            <div class="medium-9 columns">
-              <%= fld.check_box :show_on_minify_form?, {}, "true", "false" %>
+            <div class="medium-8 columns">
+              <%= fld.check_box :show_on_short_form?, {}, "true", "false" %>
             </div>
           </div>
-          </p>
       <% end %>
       <% if @field.type == 'date_field' %>
           <p class="date_validation_method">
@@ -58,12 +50,11 @@
           </p>
       <% end %>
       <% if @field.type == 'subform' %>
-          <p>
           <div class="row">
-            <div class="medium-3 columns">
+            <div class="medium-4 columns">
               <%= fld.label :subform_sort_by, t("subform_sort_by"), :class => 'key inline' %>
             </div>
-            <div class="medium-9 columns">
+            <div class="medium-8 columns">
               <%= fld.select "subform_sort_by",
                              options_for_select(@field.subform_section.fields.select { |sf| sf.type == "date_field" }
                                                     .map { |sf| [sf.display_name, sf.name] }, @field.subform_sort_by || ''), {},
@@ -71,7 +62,6 @@
                              class: "chosen-select-or-new", id: "form_section_form_group_name" %>
             </div>
           </div>
-          </p>
       <% end %>
       <div class="clearfix"></div>
       <div class="translation_lang_panel">
