--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -16,14 +16,16 @@
 <% if documents.present? && !formObject.new_record?%>
   <% documents.each do |document| %>
     <div class="row update_document">
-      <% attachment_key = document["attachment_key"] %>
-      <% document_description = document["document_description"] || "" %>
-      <% comments = document["comments"] || "" %>
-      <% name = "#{record_class_name}[#{update_document}][#{attachment_key}]" %>
-      <% description_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_document_description"%>
-      <% date_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_date"%>
-      <% comments_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_comments"%>
-      <% delete_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_delete_document"%>
+      <%
+      attachment_key = document["attachment_key"]
+      document_description = document["document_description"] || ""
+      comments = document["comments"] || ""
+      name = "#{record_class_name}[#{update_document}][#{attachment_key}]"
+      description_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_document_description"
+      date_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_date"
+      comments_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_comments"
+      delete_field_id = "#{record_class_name}_#{update_document}_#{attachment_key}_delete_document"
+      %>
       <div class="medium-4 columns">
         <span class="tool-tip-label">
           <%= label_tag I18n.t(document_upload_box.name, :default => document_upload_box.display_name) %>
@@ -34,18 +36,24 @@
           <span class="document"><%= document["file_name"] %></span>
         </div>
       </div>
+    </div>
+    <div class="row">
       <div class="medium-4 columns">
         <label class="key">Document Name</label>
       </div>
       <div class="medium-8 columns">
         <%= text_field_tag "#{name}[document_description]", document_description, :id => description_field_id %>
       </div>
+    </div>
+    <div class="row">
       <div class="medium-4 columns">
         <label class="key">Document Date</label>
       </div>
       <div class="medium-8 columns">
         <%= text_field_tag "#{name}[date]", document["date"], :id => date_field_id, :class => 'form_date_field' %>
       </div>
+    </div>
+    <div class="row">
       <div class="medium-4 columns">
         <label class="key">Comments</label>
       </div>
@@ -62,13 +70,14 @@
 <div id="file_container">
   <div id="file-group" class="document">
     <div class="file">
+      <%
+        prefix = "#{record_class_name}_#{upload_document}"
+        description_upload_id = "#{prefix}_0_document_description"
+        date_upload_id = "#{prefix}_0_date"
+        comments_upload_id = "#{prefix}_0_comments"
+        delete_upload_id = "#{prefix}_0_delete_document"
+        %>
       <div class="row">
-        <% prefix = "#{record_class_name}_#{upload_document}"%>
-        <% description_upload_id = "#{prefix}_0_document_description"%>
-        <% date_upload_id = "#{prefix}_0_date"%>
-        <% comments_upload_id = "#{prefix}_0_comments"%>
-        <% delete_upload_id = "#{prefix}_0_delete_document"%>
-
         <div class="medium-4 columns">
           <span class="tool-tip-label">
             <%= label_tag "#{record_class_name}[#{upload_document}][0][document]", I18n.t("fields.file_upload_box.add_document_label"), :class=>'key inline' %>
@@ -77,18 +86,24 @@
         <div class="medium-8 columns file_upload">
           <%= render "form_section/file_input", name: "#{record_class_name}[#{upload_document}][0][document]", id: "#{record_class_name}_#{upload_document}_0_document", help_text: document_upload_box.help_text || ""%>
         </div>
+      </div>
+      <div class="row">
         <div class="medium-4 columns">
           <label class="key">Document Name</label>
         </div>
         <div class="medium-8 columns">
           <%= text_field_tag "#{record_class_name}[#{upload_document}][0][document_description]", "", :id => description_upload_id, :tag => "description" %>
         </div>
+      </div>
+      <div class="row">
         <div class="medium-4 columns">
           <label class="key">Document Date</label>
         </div>
         <div class="medium-8 columns">
           <%= text_field_tag "#{record_class_name}[#{upload_document}][0][date]", "", :id => date_upload_id, :tag => "date", :class => 'form_date_field' %>
         </div>
+      </div>
+      <div class="row">
         <div class="medium-4 columns">
           <label class="key">Comments</label>
         </div>
