--- a/app/views/form_section/_field_display_document.html.erb
+++ b/app/views/form_section/_field_display_document.html.erb
@@ -11,6 +11,8 @@
           <% document_url = send("#{formObject.class.name.underscore.downcase}_document_url", formObject.id, document["attachment_key"]) %>
           <%= link_to document["file_name"], document_url, :class => "document" %>
         </div>
+      </div>
+      <div class="row">
         <div class="medium-4 columns">
           <label class="key document-description">Document Name</label>
         </div>
@@ -18,6 +20,8 @@
           <% value = document["document_description"] || "" %>
           <span class="document-description"><%= value %></span>
         </div>
+      </div>
+      <div class="row">
         <div class="medium-4 columns">
           <label class="key date">Document Date</label>
         </div>
@@ -25,6 +29,8 @@
           <% value = document["date"] || "" %>
           <span class="date"><%= value %></span>
         </div>
+      </div>
+      <div class="row">
         <div class="medium-4 columns">
           <label class="key comments">Comments</label>
         </div>
