--- a/app/assets/stylesheets/primero/button.scss
+++ b/app/assets/stylesheets/primero/button.scss
@@ -39,7 +39,7 @@
 }
 
 .import_button {
-  width: 200px; 
+  width: 200px;
   float: right;
 }
 
@@ -90,6 +90,10 @@ a.ui-dialog-titlebar-close.ui-corner-all {
           font-size: .7rem;
           color: $light_grey_color;
         }
+
+        span.view_history_flags_label {
+          font-size: .8rem;
+        }
       }
     }
 
@@ -101,11 +105,17 @@ a.ui-dialog-titlebar-close.ui-corner-all {
     .flag_unflag_header {
       border-bottom: 1px solid #ddd;
       margin-bottom: 5px;
+      display: flex;
 
       span {
         font-family: "Roboto",sans-serif;
         color: #86a05d;
       }
+
+      span.view_history_flags {
+        cursor: pointer;
+      }
+
     }
 
     span.collapse_expand_flag {
@@ -229,7 +239,7 @@ ul.sf-menu ul li:first-of-type a, ul.sf-menu ul ul li:first-of-type a {
   margin-top: -5px;
   margin-right: -3px;
   border-color: transparent;
-  border-left-color: $green_color; 
+  border-left-color: $green_color;
 }
 
 .sf-arrows ul li > .sf-with-ul:focus:after,
