--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -30,6 +30,14 @@
         '12-17',
         '18+'
       ], nil, nil, 'range') %>
+      <% # This is a UNHCR range age  %>
+      <%= build_filter_checkboxes(t("cases.filter_by.age_range"), 'age', [
+        '0-4',
+        '5-11',
+        '12-17',
+        '18-59',
+        '60+'
+      ], nil, nil, 'range') %>
     <% end %>
     <% if filters_to_show.include? 'Sex' %>
       <%= build_filter_checkboxes(t("cases.filter_by.sex"), 'sex', [t("cases.filter_by.male"), t("cases.filter_by.female")]) %>
