--- a/app/views/approvals/_button.html.erb
+++ b/app/views/approvals/_button.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <%= link_to t("buttons.approval"), '#', class: 'has_sub', onclick: 'return false;' %>
+  <%= link_to t("buttons.request_approval"), '#', class: 'has_sub', onclick: 'return false;' %>
   <ul style="display:none;">
     <li>
       <%= link_to t("approvals.bia"), '#', data: {"reveal-id" => "bia_approvals"} %>
