--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="google" value="notranslate" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title><%= @page_name %></title>
   <%#= favicon_link_tag('favicon-32x32.png?v=3', sizes: "32x32") %>
   <%#= favicon_link_tag('favicon-96x96.png?v=3', sizes: "96x96") %>
