--- a/app/views/potential_matches/_child_summary_row.html.erb
+++ b/app/views/potential_matches/_child_summary_row.html.erb
@@ -1,6 +1,12 @@
 <% if @type == "tracing_request" %>
     <tr>
-      <td class="id_column"><%= link_to text_to_identify_potential_match_child(detail), case_path(detail["child_id"]), class: 'id_link' %></td>
+      <td class="id_column">
+        <% if detail["visible"] %>
+            <%= link_to text_to_identify_potential_match_child(detail), case_path(detail["child_id"]), class: 'id_link' %>
+        <% else %>
+            <%= detail["case_id"].last 7 %>
+        <% end %>
+      </td>
       <td><%= detail["age"] %></td>
       <td><%= detail["sex"] %></td>
       <td><%= detail["registration_date"] %></td>
@@ -10,7 +16,13 @@
 <% end %>
 <% if @type == "case" %>
     <tr>
-      <td class="id_column"><%= link_to text_to_identify_potential_match_tracing_request(detail), tracing_request_path(detail["tr_uuid"]), class: 'id_link ' %></td>
+      <td class="id_column">
+      <% if detail["visible"] %>
+          <%= link_to text_to_identify_potential_match_tracing_request(detail), tracing_request_path(detail["tr_uuid"]), class: 'id_link ' %>
+      <% else %>
+          <%= potential_match["tracing_request_id"].last 7 %>
+      <% end %>
+      </td>
       <td><%= detail["relation_name"] %></td>
       <td><%= detail["inquiry_date"] %></td>
       <td><%= detail["subform_tracing_request_name"] %></td>
