--- a/app/views/potential_matches/_summary_row.html.erb
+++ b/app/views/potential_matches/_summary_row.html.erb
@@ -33,7 +33,9 @@
         <%= render :partial => "#{controller.controller_name}/child_summary_row", collection: record["match_details"], as: :detail %>
         </tbody>
       </table>
-      <button style="width:100%" id="show_more_<%= record["subform_tracing_request_id"] %>">show more</button>
+      <% if record["match_details"].size > 1 %>
+          <button style="width:100%" id="show_more_<%= record["subform_tracing_request_id"] %>">show more</button>
+      <% end %>
   <% end %>
   <% if @type == "case" %>
       <table style="width:100%" class="pm_table">
@@ -47,7 +49,7 @@
         </thead>
         <tbody>
         <tr>
-          <td class="id_column"><%= link_to text_to_identify_potential_match_child(record), case_path(record["child_id"]), class: 'id_link'  %></td>
+          <td class="id_column"><%= link_to text_to_identify_potential_match_child(record), case_path(record["child_id"]), class: 'id_link' %></td>
           <td><%= record["age"] %></td>
           <td><%= record["sex"] %></td>
           <td><%= record["registration_date"] %></td>
@@ -69,6 +71,8 @@
         <%= render :partial => "#{controller.controller_name}/child_summary_row", collection: record["match_details"], as: :detail %>
         </tbody>
       </table>
-      <button style="width:100%" id="show_more_<%= record["child_id"] %>">show more</button>
+      <% if record["match_details"].size > 1 %>
+          <button style="width:100%" id="show_more_<%= record["child_id"] %>">show more</button>
+      <% end %>
   <% end %>
 </div>
