added asterisk next to role and module on user new/edit

--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -57,7 +57,9 @@
             </span>
           </span>
         </div>
-        <div class="medium-1 columns"> </div>
+        <div class="medium-1 columns">
+          <span class="required">*</span>
+        </div>
       </div>
 
       <div class="row">
@@ -79,7 +81,9 @@
             </span>
           </span>
         </div>
-        <div class="medium-1 columns"> </div>
+        <div class="medium-1 columns">
+          <span class="required">*</span>
+        </div>
       </div>
 
       <div class="row">
