--- a/app/views/form_section/_field_display_document.html.erb
+++ b/app/views/form_section/_field_display_document.html.erb
@@ -14,29 +14,40 @@
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key document-description">Document Name</label>
+          <label class="key">Document Name</label>
         </div>
         <div class="medium-8 columns">
           <% value = document["document_description"] || "" %>
-          <span class="document-description"><%= value %></span>
+          <span class="value"><%= value %></span>
         </div>
       </div>
       <div class="row">
+      <div class="medium-4 columns">
+        <label class="key">Is this the current document?</label>
+      </div>
+      <div class="medium-8 columns">
+        <% value = document["is_current"]
+           value = "false" if value.blank?
+           %>
+        <span class="value"><%= I18n.t(value) %></span>
+      </div>
+    </div>
+      <div class="row">
         <div class="medium-4 columns">
-          <label class="key date">Document Date</label>
+          <label class="key">Document Date</label>
         </div>
         <div class="medium-8 columns">
           <% value = document["date"] || "" %>
-          <span class="date"><%= value %></span>
+          <span class="value"><%= value %></span>
         </div>
       </div>
       <div class="row">
         <div class="medium-4 columns">
-          <label class="key comments">Comments</label>
+          <label class="key">Comments</label>
         </div>
         <div class="medium-8 columns">
           <% value = document["comments"] || "" %>
-          <span class="comments"><%= value %></span>
+          <span class="value"><%= value %></span>
         </div>
       </div>
     <% end %>
