Fixing tickbox placement on Edit and being unnecessarily checked

--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -43,7 +43,7 @@
         <label class="key">Is this the current document?</label>
       </div>
       <div class="medium-8 columns">
-        <%= check_box_tag "#{name}[is_current]", document["is_current"], :id => is_current_field_id %>
+        <%= check_box_tag "#{name}[is_current]", "", document["is_current"], :id => is_current_field_id %>
       </div>
     </div>
     <div class="row">
