--- a/app/views/transitions/_button.html.erb
+++ b/app/views/transitions/_button.html.erb
@@ -3,7 +3,7 @@
     model_name = I18n.t("forms.record_types.#{model_class_name}")
     module_users = @module_users || []
     transition_type = type || "referral"
-    
+
     if transition_type == "referral"
       transition_role_options = @referral_roles.map {|r| [r.name, r.id]}
       no_consent_count = ((@referral_consent.present? && @referral_consent == true) ? 0 : 1)
@@ -96,5 +96,15 @@
     </div>
   </div>
 </li>
+
+<% content_for :javascript do %>
+  <script type="text/javascript">
+  $(function() {
+    new MaskedUser($("<%= "##{transition_type}-modal form #other_user_agency" %>").get(0));
+    new MaskedPassword($("<%= "##{transition_type}-modal form #password" %>").get(0));
+  });
+  </script>
+<% end %>
+
 <% end %>
 
