Removing unnecessary hash

--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -23,7 +23,7 @@
       prefix = "#{record_class_name}_#{update_document}_#{attachment_key}"
       name = "#{record_class_name}[#{update_document}][#{attachment_key}]"
       is_current_field_id = "#{prefix}_is_current"
-      description_field_id = "##{prefix}_document_description"
+      description_field_id = "#{prefix}_document_description"
       date_field_id = "#{prefix}_date"
       comments_field_id = "#{prefix}_comments"
       delete_field_id = "#{prefix}_delete_document"
