--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,13 +38,10 @@
   <div class="row collapse">
     <div id="content" class="large-9 small-9 columns dashboards">
       <% if @display_admin_dashboard %>
-        <%= render 'case_admin_district_totals', district_stats: @district_stats, model: Child %>
+        <%= render 'case_admin_reporting_location_totals', reporting_location_stats: @reporting_location_stats, model: Child %>
         <%= render 'case_protection_concerns', protection_concern_stats: @protection_concern_stats, model: Child %>
       <% elsif @display_manager_dashboard %>
         <%= render 'case_manager_case_totals', records: @aggregated_case_worker_stats, model: Child %>
-        <%# render 'recent_activities', recent_activities: @recent_activities, model: Child %>
-        <%# render 'scheduled_activities', scheduled_activities: @scheduled_activities, model: Child %>
-        <%# render 'caseload', records: @aggregated_case_worker_stats, model: Child %>
       <% else %>
         <%= render 'case_counts',
                    new_cases: @new_cases,
