--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -39,7 +39,7 @@
               <p class="error"></p>
             </div>
             <label for="password-field"><%= t('encrypt.password_label') %></label>
-            <input type="password" id="password-field">
+            <input type="password" id="password-field" name="password-field">
             <small><%= t('encrypt.password_extra_info') %></small>
             <label for="export-filename"><%= t('encrypt.file_name') %></label>
             <input type="text" id="export-filename">
