added TODO comments for remaining SL-542 tasks

--- a/app/views/home/_case_admin_reporting_location_totals.html.erb
+++ b/app/views/home/_case_admin_reporting_location_totals.html.erb
@@ -34,6 +34,7 @@
             <tr>
               <td class="id_column"><%= key.split('::').last %></td>
               <td>
+                <%# TODO - change word 'district' %>
                 <%=
                   build_reporting_location_stat_link(val[:totals],
                                                      ['child_status=Open', 'record_state=true', "district=#{key}"],
