--- a/app/views/children/_filter.html.erb
+++ b/app/views/children/_filter.html.erb
@@ -13,6 +13,7 @@
     <% if filters_to_show.include? 'Social Worker' %>
       <%= build_filter_checkboxes(t("cases.filter_by.social_worker"), 'owned_by', @associated_users, { multi: true }, false) %>
     <% end %>
+    <%#	 TODO - change per SL-542 %>
     <% if filters_to_show.include? 'District' %>
       <%= build_filter_checkboxes(t("cases.filter_by.district"), 'owned_by_location_district', @options_districts, { multi: true }, false) %>
     <% end %>
