--- a/cookbook/templates/default/nginx_couch.erb
+++ b/cookbook/templates/default/nginx_couch.erb
@@ -4,6 +4,7 @@ server {
   listen 6984 ssl;
   ssl_certificate <%= @ssl_cert_path %>;
   ssl_certificate_key <%= @ssl_key_path %>;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
   client_max_body_size 50M;
 
   proxy_buffering off;
