--- a/app/views/approvals/_approve_button.html.erb
+++ b/app/views/approvals/_approve_button.html.erb
@@ -4,13 +4,13 @@
 <li>
   <%= link_to t("buttons.approvals"), '#', class: 'has_sub', onclick: 'return false;' %>
   <ul style="display:none;">
-    <% if available_form_ids.include?("cp_bia_form") %>
+    <% if can?(:approve_bia, controller.model_class) && available_form_ids.include?("cp_bia_form") %>
       <%= render 'approvals/approve_form_button', instance: @child, approval_type: ApprovalActions::BIA %>
     <% end %>
-    <% if available_form_ids.include?("cp_case_plan") %>
+    <% if can?(:approve_case_plan, controller.model_class) && available_form_ids.include?("cp_case_plan") %>
       <%= render 'approvals/approve_form_button', instance: @child, approval_type: ApprovalActions::CASE_PLAN %>
     <% end %>
-    <% if available_form_ids.include?("closure_form") %>
+    <% if can?(:approve_closure, controller.model_class) && available_form_ids.include?("closure_form") %>
       <%= render 'approvals/approve_form_button', instance: @child, approval_type: ApprovalActions::CLOSURE %>
     <% end %>
   </ul>
