--- a/app/views/record_shared/_suspect_flag.html.erb
+++ b/app/views/record_shared/_suspect_flag.html.erb
@@ -14,6 +14,7 @@
        :style => "flag",
        :button_style => "green-button",
        :mark_as_message_unflag_date => t("#{record.class.name.underscore.downcase}.unflag_date")+":",
-       :mark_as_message_unflag_by => t("#{record.class.name.underscore.downcase}.unflag_by")+":"
+       :mark_as_message_unflag_by => t("#{record.class.name.underscore.downcase}.unflag_by")+":",
+       :mark_as_message_unflagged_label => t("#{record.class.name.underscore.downcase}.unflagged_label")+":"
    }
 %>
