--- a/app/assets/javascripts/templates/remove_flag_record_show.jst.ejs
+++ b/app/assets/javascripts/templates/remove_flag_record_show.jst.ejs
@@ -5,7 +5,7 @@
       <span class="row view_history_flags_label"><%= unflagged_by %></span>
     </div>
     <div class="medium-7 columns">
-      <span class="row view_history_flags_label"><%= unflag_message %></span>
+      <span class="row view_history_flags_label"><%= unflagged_label %></span>
       <span class="row view_history_flags_label"><%= remove_message %></span>
     </div>
     <div class="medium-2 columns">
