added validation spec tests for ReportingLocation and SystemSettings

--- a/app/views/home/_case_admin_reporting_location_totals.html.erb
+++ b/app/views/home/_case_admin_reporting_location_totals.html.erb
@@ -34,38 +34,37 @@
             <tr>
               <td class="id_column"><%= key.split('::').last %></td>
               <td>
-                <%# TODO - change word 'district' %>
                 <%=
                   build_reporting_location_stat_link(val[:totals],
-                                                     ['child_status=Open', 'record_state=true', "district=#{key}"],
+                                                     ['child_status=Open', 'record_state=true', "reporting_location=#{key}"],
                                                      model, reporting_location, admin_level)
                 %>
               </td>
               <td>
                 <%=
                   build_reporting_location_stat_link(val[:new_last_week],
-                                                     ['child_status=Open', 'record_state=true', "district=#{key}", "created_at=#{last_week}"],
+                                                     ['child_status=Open', 'record_state=true', "reporting_location=#{key}", "created_at=#{last_week}"],
                                                      model, reporting_location, admin_level)
                 %>
               </td>
               <td>
                 <%=
                   build_reporting_location_stat_link(val[:new_this_week],
-                                                     ['child_status=Open', 'record_state=true', "district=#{key}", "created_at=#{this_week}"],
+                                                     ['child_status=Open', 'record_state=true', "reporting_location=#{key}", "created_at=#{this_week}"],
                                                      model, reporting_location, admin_level)
                 %>
               </td>
               <td>
                 <%=
                   build_reporting_location_stat_link(val[:closed_last_week],
-                                                     ['child_status=Closed', 'record_state=true', "district=#{key}", "date_closure=#{last_week}"],
+                                                     ['child_status=Closed', 'record_state=true', "reporting_location=#{key}", "date_closure=#{last_week}"],
                                                      model, reporting_location, admin_level)
                 %>
               </td>
               <td>
                 <%=
                   build_reporting_location_stat_link(val[:closed_this_week],
-                                                     ['child_status=Closed', 'record_state=true', "district=#{key}", "date_closure=#{this_week}"],
+                                                     ['child_status=Closed', 'record_state=true', "reporting_location=#{key}", "date_closure=#{this_week}"],
                                                      model, reporting_location, admin_level)
                 %>
               </td>
