JOR-71 show flag history.
make the text justify and doesn't allow go out of the width of the dialog box.

--- a/app/assets/javascripts/templates/remove_flag_record_show.jst.ejs
+++ b/app/assets/javascripts/templates/remove_flag_record_show.jst.ejs
@@ -4,9 +4,9 @@
       <span class="row view_history_flags_label"><%= unflag_by %></span>
       <span class="row view_history_flags_label"><%= unflagged_by %></span>
     </div>
-    <div class="medium-7 columns">
+    <div class="medium-7 columns view_history_flags_label">
       <span class="row view_history_flags_label"><%= unflagged_label %></span>
-      <span class="row view_history_flags_label"><%= remove_message %></span>
+      <div class="row  view_history_flags_reason"><%= remove_message %></div>
     </div>
     <div class="medium-2 columns">
       <span class="row view_history_flags_label"><%= unflag_date %></span>
